--- a/package.json
+++ b/package.json
@@ -4,8 +4,73 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/server.js",
+    "start:local": "env-cmd -f ./.env.local nodemon ./src/server.js",
+    "start:dev": "env-cmd -f ./.env.dev nodemon -L ./src/server.js",
+    "test": "env-cmd -f ./.env.test mocha",
+    "migration:local": "cd src/migrations & node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@bull-board/express": "^3.10.7",
+    "@casl/ability": "^6.5.0",
+    "@ims-systems-00/ims-core": "^1.0.6",
+    "@riadhossain43/mongoose-autoincrement": "^1.0.1",
+    "@sendgrid/client": "^7.6.2",
+    "@sendgrid/mail": "^7.6.0",
+    "aws-sdk": "^2.1321.0",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.7.0",
+    "casl": "^1.1.0",
+    "chai": "^5.0.0",
+    "compression": "^1.7.4",
+    "config": "^3.3.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-holidays": "^3.12.2",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
+    "estacion": "^1.2.3",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^6.8.0",
+    "faker": "^6.6.6",
+    "html-pdf": "^3.0.1",
+    "http-status-codes": "^2.2.0",
+    "install": "^0.13.0",
+    "jira.js": "^2.19.1",
+    "joi": "^17.5.0",
+    "json2csv": "^5.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "libreoffice-convert": "^1.4.1",
+    "lodash": "^4.17.21",
+    "middleware-async": "^1.3.1",
+    "migrate-mongoose": "^4.0.0",
+    "mocha": "^10.0.0",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.15",
+    "mongoose-paginate-v2": "^1.4.2",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.7.2",
+    "npm": "^8.5.0",
+    "openai": "^3.3.0",
+    "read-excel-file": "^5.1.0",
+    "remote-log-stream": "^1.0.3",
+    "secure-random-password": "^0.2.3",
+    "sinon": "^14.0.0",
+    "socket.io": "^3.1.1",
+    "stripe": "^8.204.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.10.0",
+    "workerpool": "^6.1.5",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.7"
+  }
 }
